# DX21

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
.github/workflows/: ci.yml
docs/plans/: fm-synth-plugin-plan.md  op4-technical-handoff.md
docs/plans/design_handoff_op4_synth/: OP4 App.dc.html  OP4 Voice Panel (explorations).dc.html  README.md
src/: App.tsx  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  main.tsx  styles.css
src/audio/: fmEngine.ts  useAudio.ts  waves.ts
src/bridge/: PatchJson.cpp  PatchJson.h  WebPatch.cpp  WebPatch.h
src/components/: AlgorithmGlyph.tsx  Editable.tsx  EnvelopeGraph.tsx  Knob.tsx  Slider.tsx  Toggle.tsx
src/engine/: Controllers.h  Envelope.h  FMEngine.cpp  FMEngine.h  LFO.h  OPZChip.cpp  OPZChip.h  Voice.cpp  Voice.h
src/midi/: CCTable.h  MEP4Echo.h  NRPNCodec.h
src/model/: Patch.h  Types.h
src/plugin/: bridge.ts
src/state/: seed.ts  store.ts  types.ts
src/sysex/: ACEDCodec.cpp  ACEDCodec.h  SysexFifo.h  SysexRouter.h  SyxFile.h  VCEDCodec.cpp  VCEDCodec.h  VMEMCodec.cpp  VMEMCodec.h
src/theme/: themes.ts  tokens.ts
src/views/: DrumsView.tsx  FxView.tsx  GeneratorView.tsx  LibraryView.tsx  MidiView.tsx  VoiceView.tsx
tests/: engine_tests.cpp  null_test.cpp  patchjson_tests.cpp  sysex_tests.cpp  wav.h  webpatch_tests.cpp
